# graphics-2

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rustfmt.toml
bindings/: Cargo.toml  lib.rs
crates/bindgen/: Cargo.toml  README.md
crates/bindgen/src/: lib.rs  main.rs  parsing.rs
crates/bindgen/src/xml/: loading.rs  mod.rs  parsing.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/src/: errors.rs  lib.rs
crates/core/src/funcs/: buffers.rs  shaders.rs  vertex.rs
crates/core/src/types/: enums.rs  macros.rs  mod.rs
crates/gfx/: Cargo.toml
crates/gfx/src/: buffers.rs  lib.rs  shaders.rs
crates/gl/: Cargo.toml  README.md  build.rs
crates/gloog/: Cargo.toml  README.md
crates/gloog-core/src/: lib.rs
crates/gloog-core/src/funcs/: mod.rs
crates/gloog-macro/: Cargo.toml  README.md
crates/gloog-macro/src/: common.rs  lib.rs  matrix.rs  vector.rs
crates/gloog-math/: Cargo.toml  README.md
crates/gloog-math/src/: lib.rs
crates/gloog-math/src/mat/: mod.rs  tests.rs
crates/gloog-math/src/matrix/: mat2.rs  mat3.rs  mat4.rs  mod.rs
crates/gloog-math/src/vec/: mod.rs  tests.rs
crates/gloog-math/src/vector/: mod.rs  vec2.rs  vec3.rs  vec4.rs
crates/gloog/src/: buffers.rs  errors.rs  lib.rs  shaders.rs  vao.rs  vertex.rs
crates/gloog/src/types/: enums.rs  flags.rs  macros.rs  mod.rs
crates/math/: Cargo.toml  README.md
crates/math-proc/: Cargo.toml
crates/math-proc/src/: common.rs  lib.rs  matrix.rs  vector.rs
crates/math/src/: lib.rs  mat.rs  vec.rs
crates/math/src/base/: mod.rs
crates/math/src/base/matrix/: mat2.rs  mat3.rs  mat4.rs  mod.rs
crates/math/src/base/vector/: mod.rs  vec2.rs
crates/math/src/geometry/: mod.rs
crates/math/src/mat/: mod.rs
crates/math/src/matrix/: mat2.rs  mat3.rs  mat4.rs  mod.rs
crates/math/src/transforms/: mod.rs
crates/math/src/vec/: mod.rs
crates/math/src/vector/: mod.rs  vec2.rs  vec3.rs  vec4.rs
gfx/: Cargo.toml
gfx/src/funcs/: mod.rs  shaders.rs
gloog/: Cargo.toml
gloog-core/: Cargo.toml  README.md
gloog-core/src/: debug.rs  lib.rs  macros.rs  meta.rs  raw.rs  shader.rs
gloog-core/src/funcs/: buffers.rs  debug.rs  mod.rs  shaders.rs  uniforms.rs  vertex.rs
gloog-core/src/new/: buffer.rs
gloog-core/src/objects/: buffer.rs  mod.rs  vertex.rs
gloog-core/src/objects/shader/: mod.rs  uniform.rs
gloog-core/src/shader/: mod.rs  uniform.rs
gloog-core/src/types/: enums.rs  mod.rs
gloog-math/: Cargo.toml  README.md
gloog-math/src/base/matrix/: mat2.rs  mat3.rs  mat4.rs  tests.rs
gloog-math/src/base/vector/: mod.rs  vec2.rs  vec3.rs  vec4.rs
gloog/src/: lib.rs
gloog/src/loader/: mod.rs  obj.rs
gloog/src/model/: mesh.rs  mod.rs
math/: Cargo.toml
math/src/: lib.rs
math/src/base/matrix/: tests.rs
math/src/base/vector/: vec4.rs
old-core/funcs/: debug.rs  mod.rs  uniforms.rs  vertex.rs
old-core/types/: enums.rs  flags.rs  mod.rs
opengl/: Cargo.toml
opengl/src/: lib.rs
opengl/src/funcs/: buffers.rs  mod.rs  shaders.rs  uniforms.rs  vertex.rs
opengl/src/types/: enums.rs  macros.rs  mod.rs
src/: lib.rs
