[package]
name = "graphics-2"
description = "All of the exercises and assignments for my Computer Graphics reading course."
authors = ["Matthew Brown <matthew.e.brown.17@gmail.com>"]
version = "0.1.0"
edition = "2021"


[dependencies]
# Local crates
bindings = { version = "0.1.0", path = "./bindings" }
gfx = { version = "0.1.0", path = "./gfx" }
math = { version = "0.1.0", path = "./math" }

# Third-party deps
bytemuck = "1.13.1"
glfw = "0.52.0"


[workspace]
members = ["./bindings", "./gfx", "./math"]
