[package]
name = "gloog-math"
description = """
Implementations of vectors and matrices. These types are not designed to be complete, generic,
mathematical models of vectors or matrices like one would find in a crate like `nalgebra`; they are
designed to work specifically with OpenGL for the purposes of this course. They are based primarily
off of Khronos's wiki page on data types.
"""
authors = ["Matthew Brown <matthew.e.brown.17@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
# Local deps
gloog-macro = { path = "../gloog-macro" }
# 3rd party deps
bytemuck = "1.13.1"
