[package]
name = "math-proc"
description = "Procedural macros used to generate the final types from the `math` crate."
authors = ["Matthew Brown <matthew.e.brown.17@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = [ "parsing" ] }
indefinite = "0.1.6"
