[package]
name = "gloog-math"
description = """
Implementations of vectors, matrices, and other related types. The structures defined by this crate
are primarily based off of (a) Khronos's wiki pages, and (b) Foundations of Game Development, vol. 1
and 2 by Eric Lengyel. They are designed to work specifically with OpenGL for the purposes of this
course (as opposed to something more formal like nalgebra).
"""
authors = ["Matthew Brown <matthew.e.brown.17@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
